2005-05-29  Benoît Dejean  <TazForEver@dlfp.org>

	* src/load-graph.c: (load_graph_destroy), (load_graph_new): Removed
	unused global (object_list).

2005-05-25  Benoît Dejean  <TazForEver@dlfp.org>

	* configure.in:
	* src/Makefile.am:
	* src/proctable.c:
	* src/selinux.c: (get_process_selinux_context),
	(can_show_security_context_column):
	* src/selinux.h: Moved all the SELinux code to src/selinux.[ch].
	Better SELinux (auto-)detection in configure.in.

2005-05-25  Benoît Dejean  <TazForEver@dlfp.org>

	* src/procman.h:
	* src/proctable.c: (proctable_free_info), (remove_info_from_list),
	(get_info): ProcInfo::children is now GSList.

2005-05-23  Benoît Dejean  <TazForEver@dlfp.org>

	* src/memmaps.c: (ghashtable_clear_callback), (ghashtable_clear),
	(add_new_maps), (compare_memmaps), (update_memmaps_dialog),
	(close_memmaps_dialog), (create_memmapsdata), (memmaps_timer),
	(create_single_memmaps_dialog), (create_memmaps_dialog): Big rework.
	
	Moved all data to MemMapsData instead of storing(hiding) stuff in the
	tree's gobject properties. So it's also now reentrant. Added some TODO.
	I think it's cleaner like this. opendialogs.c should be reworked the
	same way :/

2005-05-20  Benoît Dejean  <TazForEver@dlfp.org>

	* src/memmaps.c: (add_new_maps): Little cleanup. Removed unneeded
	MemmapsInfo type.
	
	* configure.in: Post release version bump.

2005-05-18  Benoît Dejean  <TazForEver@dlfp.org>

	* NEWS:
	* configure.in: Released 2.11.2.

2005-05-13  Benoît Dejean  <TazForEver@dlfp.org>

	* src/procdialogs.c: (procdialog_create_kill_dialog): Fixed strangely
	formulated messages.
	Patch by Benjamin LeMasurier <uidzer0@uidzer0.org>.
	Closes #163395.

2005-05-13  Benoît Dejean  <TazForEver@dlfp.org>

	* src/procman.h: ProcConfig::update_inteval is now unsigned.

2005-05-13  Benoît Dejean  <TazForEver@dlfp.org>

	* src/callbacks.c:
	* src/callbacks.h:
	* src/interface.c: (create_proc_view):
	* src/procman.h:
	* src/proctable.c: (search_equal_func), (proctable_new),