@@ -1,3 +1,9 @@
+2005-05-30  Benoît Dejean  <TazForEver@dlfp.org>
+
+	* src/interface.c: (create_sys_view):
+	Use "CPU" instead of "CPU%d" is system has only one cpu.
+	Closes #305876.
+
 2005-05-29  Benoît Dejean  <TazForEver@dlfp.org>
 
 	* src/load-graph.c: (load_graph_destroy), (load_graph_new): Removed
